[package]
name = "spake2-wasm"
version = "0.1.0"
authors = ["ayyghost <ayyghost@users.noreply.github.com>"]
edition = "2018"

[dependencies]
spake2 = "0.2"
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
